--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,47 +10,47 @@
      "output_type": "stream",
      "text": [
       "Collecting pandas\n",
-      "  Obtaining dependency information for pandas from https://files.pythonhosted.org/packages/a8/44/d9502bf0ed197ba9bf1103c9867d5904ddcaf869e52329787fc54ed70cc8/pandas-2.2.3-cp311-cp311-macosx_10_9_x86_64.whl.metadata\n",
-      "  Using cached pandas-2.2.3-cp311-cp311-macosx_10_9_x86_64.whl.metadata (89 kB)\n",
-      "Collecting numpy>=1.23.2 (from pandas)\n",
-      "  Obtaining dependency information for numpy>=1.23.2 from https://files.pythonhosted.org/packages/ad/81/c8167192eba5247593cd9d305ac236847c2912ff39e11402e72ae28a4985/numpy-2.1.3-cp311-cp311-macosx_10_9_x86_64.whl.metadata\n",
-      "  Using cached numpy-2.1.3-cp311-cp311-macosx_10_9_x86_64.whl.metadata (62 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in ./.venv/lib/python3.11/site-packages (from pandas) (2.9.0.post0)\n",
+      "  Downloading pandas-2.2.3-cp313-cp313-macosx_10_13_x86_64.whl.metadata (89 kB)\n",
+      "Collecting numpy>=1.26.0 (from pandas)\n",
+      "  Downloading numpy-2.1.3-cp313-cp313-macosx_10_13_x86_64.whl.metadata (62 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
       "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Obtaining dependency information for pytz>=2020.1 from https://files.pythonhosted.org/packages/11/c3/005fcca25ce078d2cc29fd559379817424e94885510568bc1bc53d7d5846/pytz-2024.2-py2.py3-none-any.whl.metadata\n",
-      "  Using cached pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "  Downloading pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
       "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Obtaining dependency information for tzdata>=2022.7 from https://files.pythonhosted.org/packages/a6/ab/7e5f53c3b9d14972843a647d8d7a853969a58aecc7559cb3267302c94774/tzdata-2024.2-py2.py3-none-any.whl.metadata\n",
-      "  Using cached tzdata-2024.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Using cached pandas-2.2.3-cp311-cp311-macosx_10_9_x86_64.whl (12.6 MB)\n",
-      "Using cached numpy-2.1.3-cp311-cp311-macosx_10_9_x86_64.whl (21.2 MB)\n",
-      "Using cached pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
-      "Using cached tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
+      "  Downloading tzdata-2024.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Downloading pandas-2.2.3-cp313-cp313-macosx_10_13_x86_64.whl (12.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.5/12.5 MB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading numpy-2.1.3-cp313-cp313-macosx_10_13_x86_64.whl (20.8 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.8/20.8 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
+      "Downloading tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
       "Installing collected packages: pytz, tzdata, numpy, pandas\n",
       "Successfully installed numpy-2.1.3 pandas-2.2.3 pytz-2024.2 tzdata-2024.2\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Collecting plotly\n",
-      "  Obtaining dependency information for plotly from https://files.pythonhosted.org/packages/e5/ae/580600f441f6fc05218bd6c9d5794f4aef072a7d9093b291f1c50a9db8bc/plotly-5.24.1-py3-none-any.whl.metadata\n",
-      "  Using cached plotly-5.24.1-py3-none-any.whl.metadata (7.3 kB)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in ./.venv/lib/python3.11/site-packages (from plotly) (9.0.0)\n",
-      "Requirement already satisfied: packaging in ./.venv/lib/python3.11/site-packages (from plotly) (24.2)\n",
-      "Using cached plotly-5.24.1-py3-none-any.whl (19.1 MB)\n",
-      "Installing collected packages: plotly\n",
-      "Successfully installed plotly-5.24.1\n",
+      "  Downloading plotly-5.24.1-py3-none-any.whl.metadata (7.3 kB)\n",
+      "Collecting tenacity>=6.2.0 (from plotly)\n",
+      "  Downloading tenacity-9.0.0-py3-none-any.whl.metadata (1.2 kB)\n",
+      "Requirement already satisfied: packaging in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from plotly) (24.2)\n",
+      "Downloading plotly-5.24.1-py3-none-any.whl (19.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m19.1/19.1 MB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading tenacity-9.0.0-py3-none-any.whl (28 kB)\n",
+      "Installing collected packages: tenacity, plotly\n",
+      "Successfully installed plotly-5.24.1 tenacity-9.0.0\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "\u001b[31mERROR: Could not find a version that satisfies the requirement nbfornmat (from versions: none)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: No matching distribution found for nbfornmat\u001b[0m\u001b[31m\n",
       "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
+      "\u001b[31mERROR: No matching distribution found for nbfornmat\u001b[0m\u001b[31m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -434,13 +434,13 @@
        "[47774 rows x 18 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('game_reviews/video_game_reviews.csv')\n",
+    "df = pd.read_csv('video_game_reviews.csv')\n",
     "df"
    ]
   },
@@ -476,7 +476,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. The problem we Try to solve"
+    "## 2. Identify your audience :\n",
+    "\n",
+    "Sales rep ?\n",
+    "Developer ?\n",
+    "C-level ?\n",
+    "Shareholder ?\n",
+    "\n",
+    "Tailor your pitch to their needs , and level of comprehension.\n",
+    "\n",
+    "When you are presenting your results, most of the time, you must use non technical language, except if the audience is technical. It's part of your job to adapt your work to your audience.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. The problem we Try to solve"
    ]
   },
   {
@@ -490,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Analysis"
+    "## 4. Analysis"
    ]
   },
   {
@@ -948,6 +965,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Developer\n",
+       "Nintendo          29.911884\n",
+       "Epic Games        29.814572\n",
+       "EA Sports         29.765209\n",
+       "Capcom            29.759615\n",
+       "Valve             29.742294\n",
+       "Bungie            29.737564\n",
+       "Game Freak        29.681911\n",
+       "Innersloth        29.657889\n",
+       "CD Projekt Red    29.585690\n",
+       "Rockstar Games    29.536888\n",
+       "Name: User Rating, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Developer\")[\"User Rating\"].mean().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -956,7 +1004,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -970,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
