[ADD] - Final tests

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -116,6 +116,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"User Rating\"].value_counts()\n",
+    "\n",
+    "# Be sure there are only Yes and No values in the column\n",
+    "df[\"Requires Special Device\"].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find the best Gaming Studio company based on user ratings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -125,11 +151,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Do users like more single player games or multiplayer games"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.groupby(\"Multiplayer\")[\"User Rating\"].mean().sort_values(ascending=False)\n",
+    "#We can see by checking the output that there's no significant difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TIME TO DO THE SAME THING FOR GAME MODES OFFLINE AND ONLINE\n",
+    "df.groupby(\"Game Mode\")[\"User Rating\"].mean().sort_values(ascending=False)\n",
+    "#Users care even else about the game mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same thing for the genre\n",
+    "df.groupby(\"Genre\")[\"User Rating\"].mean().sort_values(ascending=False)\n",
+    "#Party genre is the most popular game, top 2 will be fighting and top 3 will be RPG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"Platform\")[\"User Rating\"].mean().sort_values(ascending=False)\n",
+    "#Users like more Gaming platforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"Release Year\")[\"User Rating\"].mean().sort_values(ascending=False)\n",
+    "# 2011 games were the most successful\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Do teens prefer long games or Short games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[(df[\"Game Mode\"]==\"Offline\") & (df['Age Group Targeted']==\"Teens\")].groupby(\"Game Length (Hours)\")[\"User Rating\"].mean().sort_values(ascending=False)\n",
+    "# Teens prefer long games of 50 hours +"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What about kids and adults ?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[(df[\"Game Mode\"]==\"Offline\") & (df['Age Group Targeted']==\"Kids\")].groupby(\"Game Length (Hours)\")[\"User Rating\"].mean().sort_values(ascending=False)\n",
+    "# Kids prefer long games of approx 40 hours +\n",
+    "\n",
+    "df[(df[\"Game Mode\"]==\"Offline\") & (df['Age Group Targeted']==\"Adults\")].groupby(\"Game Length (Hours)\")[\"User Rating\"].mean().sort_values(ascending=False)\n",
+    "# Adults prefer long games of 50 hours +\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Who plays the most Low Graphics games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df['Graphics Quality'] == 'Low'].groupby(\"Age Group Targeted\").size().sort_values(ascending=False)\n",
+    "# Not much big difference between the age groups"
+   ]
   }
  ],
  "metadata": {
