--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,63 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (2.2.3)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from pandas) (2.1.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: plotly in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (5.24.1)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from plotly) (9.0.0)\n",
-      "Requirement already satisfied: packaging in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from plotly) (24.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "\u001b[31mERROR: Could not find a version that satisfies the requirement nbfornmat (from versions: none)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
-      "\u001b[31mERROR: No matching distribution found for nbfornmat\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: nbstripout in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (0.8.0)\n",
-      "Requirement already satisfied: nbformat in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from nbstripout) (5.10.4)\n",
-      "Requirement already satisfied: fastjsonschema>=2.15 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from nbformat->nbstripout) (2.20.0)\n",
-      "Requirement already satisfied: jsonschema>=2.6 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from nbformat->nbstripout) (4.23.0)\n",
-      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from nbformat->nbstripout) (5.7.2)\n",
-      "Requirement already satisfied: traitlets>=5.1 in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from nbformat->nbstripout) (5.14.3)\n",
-      "Requirement already satisfied: attrs>=22.2.0 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from jsonschema>=2.6->nbformat->nbstripout) (24.2.0)\n",
-      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from jsonschema>=2.6->nbformat->nbstripout) (2024.10.1)\n",
-      "Requirement already satisfied: referencing>=0.28.4 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from jsonschema>=2.6->nbformat->nbstripout) (0.35.1)\n",
-      "Requirement already satisfied: rpds-py>=0.7.1 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from jsonschema>=2.6->nbformat->nbstripout) (0.21.0)\n",
-      "Requirement already satisfied: platformdirs>=2.5 in /Users/mariabcours/Library/Python/3.13/lib/python/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat->nbstripout) (4.3.6)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install pandas\n",
-    "%pip install plotly\n",
-    "%pip install nbfornmat\n",
-    "%pip install nbstripout"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -460,13 +403,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. We have 47774 rows of ratings of popular video games that have been rated by the users we also have a description of these games\n",
+    "1. We have 47774 rows of ratings of different popular video games \n",
     "2. We got the dataset from Kaggle\n",
-    "3. We dont know\n",
+    "3. The data has been randomly generated\n",
     "4. We have 18 unique columns : \n",
     "    - The title of the game \n",
-    "    - User rating .....\n",
-    "5. A sample of players"
+    "    - User rating\n",
+    "    - Price ...\n",
+    "5. A sample of players that reviewed games"
    ]
   },
   {
@@ -924,6 +868,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User Rating</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Release Year</th>\n",
+       "      <th>Game Length (Hours)</th>\n",
+       "      <th>Min Number of Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>47774.000000</td>\n",
+       "      <td>47774.000000</td>\n",
+       "      <td>47774.000000</td>\n",
+       "      <td>47774.000000</td>\n",
+       "      <td>47774.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>29.719329</td>\n",
+       "      <td>39.951371</td>\n",
+       "      <td>2016.480952</td>\n",
+       "      <td>32.481672</td>\n",
+       "      <td>5.116758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.550131</td>\n",
+       "      <td>11.520342</td>\n",
+       "      <td>4.027276</td>\n",
+       "      <td>15.872508</td>\n",
+       "      <td>2.769521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10.100000</td>\n",
+       "      <td>19.990000</td>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>24.300000</td>\n",
+       "      <td>29.990000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>18.800000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>29.700000</td>\n",
+       "      <td>39.845000</td>\n",
+       "      <td>2016.000000</td>\n",
+       "      <td>32.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>35.100000</td>\n",
+       "      <td>49.957500</td>\n",
+       "      <td>2020.000000</td>\n",
+       "      <td>46.300000</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>49.500000</td>\n",
+       "      <td>59.990000</td>\n",
+       "      <td>2023.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        User Rating         Price  Release Year  Game Length (Hours)  \\\n",
+       "count  47774.000000  47774.000000  47774.000000         47774.000000   \n",
+       "mean      29.719329     39.951371   2016.480952            32.481672   \n",
+       "std        7.550131     11.520342      4.027276            15.872508   \n",
+       "min       10.100000     19.990000   2010.000000             5.000000   \n",
+       "25%       24.300000     29.990000   2013.000000            18.800000   \n",
+       "50%       29.700000     39.845000   2016.000000            32.500000   \n",
+       "75%       35.100000     49.957500   2020.000000            46.300000   \n",
+       "max       49.500000     59.990000   2023.000000            60.000000   \n",
+       "\n",
+       "       Min Number of Players  \n",
+       "count           47774.000000  \n",
+       "mean                5.116758  \n",
+       "std                 2.769521  \n",
+       "min                 1.000000  \n",
+       "25%                 3.000000  \n",
+       "50%                 5.000000  \n",
+       "75%                 7.000000  \n",
+       "max                10.000000  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On trie les developpeurs en fonction des ratings moyens"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -954,6 +1038,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On trie les plateformes en fonction des ratings moyens"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -977,6 +1068,13 @@
    ],
    "source": [
     "df.groupby(\"Platform\")[\"User Rating\"].mean().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On trie les plateformes en fonction des ratings moyens "
    ]
   },
   {
