--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -262,6 +262,15 @@
     "df[df['Graphics Quality'] == 'Low'].groupby(\"Age Group Targeted\").size().sort_values(ascending=False)\n",
     "# Not much big difference between the age groups"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df['Graphics Quality'] == 'Medium'].groupby(\"Age Group Targeted\").size().sort_values(ascending=False)"
+   ]
   }
  ],
  "metadata": {
