--- a/Notebook - Draft.ipynb
+++ b/Notebook - Draft.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. We have 47774 rows of ratings of different popular video games \n",
+    "1. We have 47774 ratings of ratings of different popular video games \n",
     "2. We got the dataset from Kaggle\n",
     "3. The data has been randomly generated\n",
     "4. We have 18 unique columns : \n",
