--- a/Notebook - Final.ipynb
+++ b/Notebook - Final.ipynb
@@ -50,13 +50,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. We have 47774 rows of popular video games that have been rated by the users we also have a description of these games\n",
+    "1. We have 47774 ratings of ratings of different popular video games \n",
     "2. We got the dataset from Kaggle\n",
-    "3. We dont know\n",
+    "3. The data has been randomly generated\n",
     "4. We have 18 unique columns : \n",
     "    - The title of the game \n",
-    "    - User rating .....\n",
-    "5. A sample of players"
+    "    - User rating\n",
+    "    - Price ...\n",
+    "5. A sample of players that reviewed games"
    ]
   },
   {
@@ -73,7 +74,8 @@
     "Tailor your pitch to their needs , and level of comprehension.\n",
     "\n",
     "When you are presenting your results, most of the time, you must use non technical language, except if the audience is technical. It's part of your job to adapt your work to your audience.\n",
-    "\n"
+    "\n",
+    "The audience is C-level executives who need strategic insights into user behavior and market trends in gaming. They likely aren't interested in technical details but want actionable insights and clear value propositions. "
    ]
   },
   {
@@ -87,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What could explain a better rating from users"
+    "The primary problem we’re addressing is identifying key factors that influence user ratings and satisfaction with video games. "
    ]
   },
   {
